--- a/index.html
+++ b/index.html
@@ -1,98 +1,112 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>ReactJS</title>
-	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <title>ReactJS</title>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-	<style>
-		table{
-			border:5px solid black;
-		}
+    <style>
+        .area{
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
 
-		table tr td{
-			border:1px solid gray;
-		}
-	</style>
-	<div id="field"></div>
-	<script type="text/babel">
-	var fieldSize=30;
+        table{
+            border:5px solid black;
+        }
+        table tr td{
+            border:1px solid gray;
+        }
+    </style>
+    <div id="root"></div>
+    <script type="text/babel">
+    class TableCell extends React.Component{
+        constructor(props){
+            super(props);
+            this.state={
+            }
+        }
+        render(){
+            return (<td className="tableCell" onClick={()=>{this.props.onClick()}}><span style={{opacity:this.props.opacityValue, color:this.props.colorValue}}>{this.props.value}</span></td>);
+        }
+    }
+    class BaseField extends React.Component{
+        constructor(props){
+            super(props);
+            let cells=[];
+            for (let i=0;i<this.props.height;i++){
+                cells[i]=[];
+                for (let j=0;j<this.props.width;j++){
+                    cells[i][j]=[];
+                    cells[i][j][0]='-'; //value
+                    cells[i][j][1]=null; //timer
+                    cells[i][j][2]=null; //opacity
+                    cells[i][j][3]=false; //IsSelected
+                }
+            }
+            this.state={
+                cells: cells
+            }
+        }
+        resetCell(context,i,j){
+            const cells=context.state.cells.slice();
+            cells[i][j][2]-=0.1;
+            if (cells[i][j][2]<=0){
+                clearInterval(cells[i][j][1]);
+                cells[i][j][1]=null;
+                cells[i][j][3]=false;  
+            }
+            context.setState({cells:cells});
+        }
 
-	class TableCell extends React.Component{
-		constructor(props){
-			super(props);
-			this.state={
-				timer:null,
-				value:0
-			}
-		}
+        cellClickHandler(i,j,cellVal=0){
+            const cells=this.state.cells.slice();
+            cells[i][j][0]=cellVal;
+            cells[i][j][2]=1.0;
+            if (cells[i][j][1])
+                clearInterval(cells[i][j][1]);
+            cells[i][j][1]=setInterval(this.resetCell,500,this,i,j);
+            cells[i][j][3]=true;
+            this.setState({cells:cells});
+        }
 
-		render(){
-			this.state.value=this.props.value;
-			return (<td className="tableCell" onClick={()=>{this.props.onClick()}}>{this.state.value}</td>);
-		}
-	}
-
-	class BaseField extends React.Component{
-		constructor(props){
-			super(props);
-			let cells=[];
-			for (let i=0;i<fieldSize;i++){
-				cells[i]=[];
-				for (let j=0;j<fieldSize;j++){
-					cells[i][j]=[];
-					cells[i][j][0]=null;
-					cells[i][j][1]=null;
-				}
-			}
-			this.state={
-				cells: cells,
-			}
-		}
-
-		resetCell(context,i,j){
-			const cells=context.state.cells.slice();
-			cells[i][j][0]=0;
-			cells[i][j][1]=null;
-			context.setState({cells:cells});
-		}
-
-		cellClickHandler(i,j,cellVal=5){
-			const cells=this.state.cells.slice();
-			cells[i][j][0]=cellVal;
-			if (cells[i][j][1])
-				clearTimeout(cells[i][j][1]);
-			cells[i][j][1]=setTimeout(this.resetCell,3000,this,i,j);
-			this.setState({cells:cells});
-		}
-
-		renderCell(i,j){
-			let cellValue = this.state.cells[i][j][0];
-
-			return <TableCell key={i+''+j} value={cellValue} onClick={()=>  this.cellClickHandler(i,j)}/>;
-		}
-
-		render(){
-			let cells=[];
-			for (let i=0;i<fieldSize;i++){
-				cells[i]=[];
-				for (let j=0;j<fieldSize;j++){
-					cells[i][j]=[];
-					cells[i][j][0]=this.renderCell(i,j);
-					cells[i][j][1]=null;
-				}
-			}
-
-			return (<table>
-					<tbody>
-						{cells.map((item,index)=> <tr key={index}>{item.map(col=>col[0])}</tr>)}
-					</tbody>
-				</table>);
-		}
-	}
-	ReactDOM.render(<BaseField/>,document.getElementById('field'));
-	</script>
+        renderCell(i,j){
+            let cellValue = this.state.cells[i][j][0];
+            let opacValue = this.state.cells[i][j][2];
+            return <TableCell key={i+''+j} opacityValue={opacValue} colorValue={cellValue<0?'#0000FF':'#FF0000'} value={cellValue} onClick={()=>  this.cellClickHandler(i,j)}/>;
+        }
+        render(){
+            let cells=[];
+            let selectedCells=[];
+            for (let i=0;i<this.props.height;i++){
+                cells[i]=[];
+                for (let j=0;j<this.props.width;j++){
+                    cells[i][j]=[];
+                    cells[i][j][0]=this.renderCell(i,j);
+                    cells[i][j][1]=null;
+                    cells[i][j][2]=1.0;
+                    if (this.state.cells[i][j][3])
+                      selectedCells[selectedCells.length]=this.renderCell(i,j);
+                }
+            }
+            return (<div className={'area'}>
+                <table>
+                    <tbody>
+                        {selectedCells.map((item,index)=><tr key={index}>{item}</tr>)}
+                    </tbody>
+                </table>
+                <table>
+                    <tbody>
+                        {cells.map((item,index)=> <tr key={index}>{item.map(col=>col[0])}</tr>)}
+                    </tbody>
+                </table>
+                </div>);
+        }
+    }
+    ReactDOM.render(<div className={'area'}><BaseField width={30} height={30}/></div>,document.getElementById('root'));
+    </script>
 </body>
 </html>
